--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,35 @@
+.AppWindow {
+  background-color: black;
+  color: #2cff21;
+}
+
 .DropdownMenu {
   position: relative;
   width: 5em;
+  display: contents;
 }
 
 .DropdownMenu__MenuIcon {
   width: 2em;
+  margin-bottom: 1em;
 }
 
 .DropdownMenuContent {
+  width: fit-content;
+  background-color: black;
+  padding-left: 4px;
+  padding-right: 4px;
+  flex-direction: column;
   position: absolute;
   z-index: 1;
+  margin-top: 2em;
+  right: 1em;
+  top: 1em;
 }
 .DropdownMenuContent__Item {
-  background-color: rgb(179, 226, 175);
+  background-color: #2cff21;
   padding: 2px;
+  max-height: fit-content;
 }
 
 .DropdownMenuContent__Item:hover {
@@ -24,12 +40,10 @@
 .Navbar {
   display: flex;
   justify-content: space-between;
-  padding-left: 1em;
-  padding-right: 1em;
 }
 
 .Navbar__MainPic {
-  width: 10em;
+  width: 15em;
 }
 
 .Home {
@@ -40,3 +54,5 @@
   width: -webkit-fill-available;
   position: relative;
 }
+
+//the color - 2cff21
