started about me page

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,23 @@
   color: white;
 }
 
+.AboutMe__Northcoders {
+  color: red;
+  white-space: pre;
+  text-decoration: none;
+  margin: 0px 5px 0px 5px;
+}
+
+.AboutMe__Title {
+  font-family: "Rexila";
+  color: white;
+}
+
+.AboutMe__SectionText {
+  font-family: "Rexila";
+  color: white;
+}
+
 .DropdownMenu {
   position: relative;
   width: 5em;
